--- a/config/samples/webapp_v1_sillywebapp.yaml
+++ b/config/samples/webapp_v1_sillywebapp.yaml
@@ -9,4 +9,8 @@ metadata:
     app.kubernetes.io/created-by: lias-awesome-app
   name: sillywebapp-sample
 spec:
-  # TODO(user): Add fields here
+  redisName: redis-sample
+  frontend: 
+    resources: 
+      requests:
+        cpu: 55m
